--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ devel/etanahViewController/src/main/resources/user.properties
 /devel/etanahMelaka/target
 /devel/etanahViewController/target
 /devel/etanahMelaka/target
+/devel/etanahModel/target
